apps/risk-compliance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grc
  labels:
    istio-injection: enabled
