apps/risk-compliance/sanction.yaml
apiVersion: v1
kind: Service
metadata:
  name: sanction-svc
  namespace: grc
spec:
  selector:
    app: sanction-svc
  ports:
    - name: http
      port: 6063
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanction-svc
  namespace: grc
  labels:
    app: sanction-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanction-svc
  template:
    metadata:
      labels:
        app: sanction-svc
        version: v1
    spec:
      serviceAccountName: sanction-svc
      containers:
        - name: sanction-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
